feat: gestione sessione autenticazione
